name:               polysoup
version:            0.3.0
synopsis:           Online XML parsing with polyparse and tagsoup
description:
    The library provides combinators for lazy, incremental XML parsing.
    Parsing results are generated lazily and the input is read on demand.

    It is built on top of the tagsoup library, which is responsible for
    preliminary tokenization of an XML input, and the polyparse library,
    which provides primitives for lazy and incremental parsing.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2012 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           XML
homepage:           https://github.com/kawu/polysoup
build-type:         Simple

library
    build-depends:
        base            >= 4        && < 5
      , containers      >= 0.4      && < 0.6
      , tagsoup         >= 0.13     && < 0.14
      , polyparse       >= 1.9      && < 1.10

    exposed-modules:
        Text.XML.PolySoup
      , Text.XML.PolySoup.XmlTree

    ghc-options: -Wall

source-repository head
    type: git
    location: git://github.com/kawu/polysoup.git
